save slot bug fixed, car_number added, scrollbar on schedule

--- a/FMI_Parking_System/frontend/account/css/account_view_styles.css
+++ b/FMI_Parking_System/frontend/account/css/account_view_styles.css
@@ -154,6 +154,30 @@ button {
   flex-grow: 0;
 }
 
+#taken-slots, #upcoming-schedule{
+  max-height: 250px;
+  overflow-y: auto;
+}    
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #ee89a1; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ff7595; 
+}
+
 #qrcode {
   text-align: -webkit-center;
 }
